test-package-compiler/src/snapshots/test_package_compiler__generated_tests__unknown_module_field_in_import.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 309
expression: "./cases/unknown_module_field_in_import"
---
error: Unknown module field
  ┌─ src/two.gleam:1:13
  │
1 │ import one.{B}
  │             ^ Did you mean `A`?

The module `one` does not have a `B` field.

